k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: fast-food-totem
  labels:
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/enforce-version: v1.28
