k8s/api-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fast-food-totem-api
  labels:
    app: fast-food-totem-api
spec:
  template:
    metadata:
      name: fast-food-totem-api
      labels:
        app: fast-food-totem-api
    spec:
      containers:
        - name: fast-food-totem-api
          image: ttozatto/fast-food-totem:1.0
          ports:
            - containerPort: 80
          livenessProbe:
            httpGet:
              path: /health/liveness
              port: 80
            periodSeconds: 10
            failureThreshold: 3
            initialDelaySeconds: 20
          readinessProbe:
            httpGet:
              path: /health/readiness
              port: 80
            periodSeconds: 30
            failureThreshold: 5
            initialDelaySeconds: 30
          resources:
            limits:
              cpu: 0.5
              memory: 400Mi
            requests:
              cpu: 0.2
              memory: 128Mi
  replicas: 1
  selector:
    matchLabels:
      app: fast-food-totem-api
