k8s/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-food-totem
  labels:
    app: fast-food-totem
 annotations:
   service.beta.kubernetes.io/aws-load-balancer-name: fast-food-totem
spec:
  type: LoadBalancer
  loadBalancerClass: service.k8s.aws/nlb
  selector:
    app: fast-food-totem-api
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
