k8s/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
spec:
  type: ClusterIP
  ports:
  - name: db-service
    port: 1433
    targetPort: 1433
  selector:
    app: db
