k8s/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress
    annotations:     
      alb.ingress.kubernetes.io/load-balancer-name: ingress
      alb.ingress.kubernetes.io/target-type: ip
      alb.ingress.kubernetes.io/scheme: internet-facing
spec:
  ingressClassName: alb
  rules:
    - host: fast-food-totem-api.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fast-food-totem-api
                port:
                  number: 80
